# payment-service

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs
db/: Cargo.toml
db/entity/: Cargo.toml
db/entity/src/: accounts.rs  mod.rs  prelude.rs  transactions.rs  user.rs
db/migration/: Cargo.toml
db/migration/src/: lib.rs  m20241221_185614_create_user_table.rs  m20241221_190742_create_accounts_table.rs  m20241221_191426_create_transactions_table.rs
db/src/: accounts.rs  db_client.rs  db_conn.rs  lib.rs  transactions.rs  user.rs  util.rs
http/: Cargo.toml
http/src/: app_state.rs  constants.rs  main.rs  routes.rs  types.rs  util.rs
http/src/features/: mod.rs
http/src/features/accounts/: account_types.rs  controllers.rs  mod.rs
http/src/features/healthcheck/: controllers.rs
http/src/features/transactions/: controllers.rs  mod.rs  transaction_types.rs
http/src/features/user/: controllers.rs  mod.rs  user_types.rs
http/src/middlewares/: auth.rs  cors.rs
