[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
tracing-subscriber = "0.3.18"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print" ] }
common = { path = "../common" }
entity = { path = "./entity" }
async-trait = "0.1.83"
tracing = "0.1.40"
chrono = "0.4.39"
num-traits = "0.2.19"
