[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tracing-actix-web = "0.7"
common = { path = "../common" }
db = { path = "../db" }
log = "0.4.22"
env_logger = "0.11.5"
actix-cors = "0.7.0"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.41"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
futures-util = "0.3.31"
pwhash = "1.0.0"
actix-governor = "0.8.0"
chrono = "0.4.39"
num-traits = "0.2.19"
